--- a/index.html
+++ b/index.html
@@ -6,14 +6,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-  <title> Front End Project | correlucas</title>
+  <title>Base Apparel Coming Soon Page | correlucas</title>
 
   <link rel="icon" href="./images/favicon-32x32.png" type="image/x-icon">
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+  <main>
+    <article>
+      <h1><span>We're<span> coming soon</h1>
+      <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>
+
+      <form id="formEmail">
+        <div>
+          <input type="text" placeholder="Email Address">
+          <img src="./images/icon-error.svg" alt="Error icon">
+        </div>
+
+        <button>
+          <img src="./images/icon-arrow.svg" alt="">
+        </button>
+      </form>
+    </article>
+
+    <picture>
+      <source srcset="./images/hero-mobile.jpg" media="(max-width:650px)">
+      <img src="./images/hero-desktop.jpg" alt="A female model with a light orange t-shirt">
+    </picture>
+  </main>
 
 </body>
 
