--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <main>
     <article>
-      <h1><span>We're<span> coming soon</h1>
+      <header class="logo">
+        <img src="./images/logo.svg" alt="Base Apparel logo">
+      </header>
+      <h1>We're <span>coming soon</span></h1>
       <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
       <form id="formEmail">
